--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_create_white_24dp"
                 fab:fab_label="Create new circle"
+                fab:fab_size="mini"
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_colorPressed="@color/primary_dark"/>
 
@@ -55,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_add_circle_outline_white_24dp"
                 fab:fab_label="Add circle"
+                fab:fab_size="mini"
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_colorPressed="@color/primary_dark"/>
 
