--- a/app/src/main/res/layout/item_broadcast.xml
+++ b/app/src/main/res/layout/item_broadcast.xml
@@ -6,32 +6,59 @@
 
     <RelativeLayout
         android:id="@+id/content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp" >
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Circle Name"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/icon"
+            android:layout_toEndOf="@+id/icon"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:scrollHorizontally="true"
+            android:text="Circle Name"/>
 
-        <eu.davidea.flipview.FlipView
-            android:id="@+id/broadcast_status"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_alignParentRight="true"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="12dp"
-            android:layout_marginEnd="12dp"
-            android:clickable="true"
-            app:checked="false"
-            app:enableInitialAnimation="true"
-            app:rearImage="@drawable/ic_check_white_24dp"
-            app:rearImageAnimationDelay="0"/>
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <eu.davidea.flipview.FlipView
+                android:id="@+id/broadcast_status"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginEnd="12dp"
+                android:clickable="true"
+                app:checked="false"
+                app:enableInitialAnimation="true"
+                app:rearImage="@drawable/ic_check_white_24dp"
+                app:rearImageAnimationDelay="0"/>
+
+            <eu.davidea.flipview.FlipView
+                android:id="@+id/is_viewing"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:clickable="true"
+                app:checked="false"
+                app:enableInitialAnimation="true"
+                app:rearImage="@drawable/ic_check_white_24dp"
+                app:rearImageAnimationDelay="0"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
