--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:orientation="horizontal">
+        android:layout_marginLeft="12dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar"
