--- a/app/src/main/res/layout-land/fragment_edit_circle.xml
+++ b/app/src/main/res/layout-land/fragment_edit_circle.xml
@@ -48,7 +48,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parentgit status"
+        android:layout_height="match_parent"
         android:layout_margin="12dp"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
