--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:ignore="ResAuto">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_height="match_parent"
@@ -26,13 +28,81 @@
                     android:id="@+id/toolbar"
                     layout="@layout/toolbar"/>
 
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/colorPrimary"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    app:tabMaxWidth="0dp"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed"
+                    style="@style/HokieFinderTabLayout"/>
+
             </android.support.design.widget.AppBarLayout>
 
-            <FrameLayout
-                android:id="@+id/fragment_container"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/appbar"/>
+                android:layout_below="@+id/appbar">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <com.github.clans.fab.FloatingActionMenu
+                    android:id="@+id/fab_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_alignBottom="@+id/view_pager"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    fab:menu_colorNormal="@color/primary"
+                    fab:menu_colorPressed="@color/primary_dark"
+                    tools:ignore="RelativeOverlap">
+
+                    <com.github.clans.fab.FloatingActionButton
+                        android:id="@+id/fab_create_circle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_create_white_24dp"
+                        fab:fab_label="Create new circle"
+                        fab:fab_size="mini"
+                        fab:fab_colorNormal="@color/primary"
+                        fab:fab_colorPressed="@color/primary_dark"/>
+
+                    <com.github.clans.fab.FloatingActionButton
+                        android:id="@+id/fab_add_circles"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_add_circle_outline_white_24dp"
+                        fab:fab_label="Add circle"
+                        fab:fab_size="mini"
+                        fab:fab_colorNormal="@color/primary"
+                        fab:fab_colorPressed="@color/primary_dark"/>
+
+                </com.github.clans.fab.FloatingActionMenu>
+
+                <com.github.clans.fab.FloatingActionButton
+                    android:id="@+id/fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_alignBottom="@+id/view_pager"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_person_add_white_24dp"
+                    fab:fab_colorNormal="@color/primary"
+                    fab:fab_colorPressed="@color/primary_dark"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
