--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,9 +33,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/fighting_gobblers_medium"
-                    app:civ_border_color="#FFFFFFFF"
-                    app:civ_border_width="2dp"/>
+                    android:src="@drawable/fighting_gobblers_medium" />
 
                 <TextView
                     android:id="@+id/username"
