--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -15,9 +15,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="24dp"
-        android:src="@drawable/fighting_gobblers_medium"
-        app:civ_border_color="#FFFFFFFF"
-        app:civ_border_width="2dp" />
+        android:src="@drawable/fighting_gobblers_medium" />
 
     <TextView
         android:id="@+id/username"
