--- a/app/src/main/res/layout/item_circle.xml
+++ b/app/src/main/res/layout/item_circle.xml
@@ -20,9 +20,7 @@
             android:id="@+id/icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/fighting_gobblers_medium"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
+            android:src="@drawable/fighting_gobblers_medium" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,8 +43,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-
-                android:layout_below="@+id/content"
                 android:text="Circle Description"
                 android:textSize="12sp"/>
 
