--- a/app/src/main/res/layout/item_circle_invite.xml
+++ b/app/src/main/res/layout/item_circle_invite.xml
@@ -22,17 +22,13 @@
             android:layout_height="48dp"
             android:layout_marginRight="12dp"
             android:layout_marginEnd="12dp"
-            android:src="@drawable/fighting_gobblers_medium"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
+            android:src="@drawable/fighting_gobblers_medium" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_avatar"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/fighting_gobblers_medium"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
+            android:src="@drawable/fighting_gobblers_medium" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,8 +51,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-
-                android:layout_below="@+id/content"
                 android:text="Username"
                 android:textSize="14sp"/>
 
