Fix issue where long circle names were hidden behind checkboxes

--- a/app/src/main/res/layout/item_broadcast.xml
+++ b/app/src/main/res/layout/item_broadcast.xml
@@ -4,23 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:layout_marginEnd="12dp" >
+        android:layout_marginEnd="12dp"
+        android:weightSum="100">
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_centerVertical="true"
+            android:layout_weight="100"
             android:ellipsize="end"
             android:maxLines="1"
             android:scrollHorizontally="true"
@@ -29,9 +30,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <eu.davidea.flipview.FlipView
@@ -58,7 +57,7 @@
 
         </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <View
         android:layout_below="@+id/content"
